Add email service with exception handling
A new mail service has been implemented, which allows for sending templated emails. The handling of MailSendException has been added to the ControllerAdvisor to manage potential errors in the mail sending process. Changes included also updating ParticipationServiceImpl and the unit testing accordingly. SMTP configuration section has been included in the application.yml file.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,5 +17,12 @@ Spring:
       max-file-size: 5MB
       max-request-size: 5MB
 
+  mail:
+    host: ${SMTP_HOST}
+    port: ${SMTP_PORT}
+    username: ${SMTP_USERNAME}
+    password: ${SMTP_PASSWORD}
+
+
 server:
   port: 8080
