Enable email sending and validate database
The commented out email sending functionality in the ParticipationServiceImpl.java has been enabled. This will ensure a thank you email is sent after user participation. In the compose.yml file, the `DDL` environment variable has been modified from `create` to `validate` to perform the database validation at startup.

--- a/compose.yml
+++ b/compose.yml
@@ -37,7 +37,7 @@ services:
       - POSTGRES_DB=corder
       - POSTGRES_USERNAME=postgres
       - POSTGRES_PASSWORD=postgres
-      - DDL=create
+      - DDL=validate
       - SMTP_HOST=sandbox.smtp.mailtrap.io
       - SMTP_PASSWORD=570e8bf1b9ab8a
       - SMTP_PORT=25
