Add data initialization, handle duplicate user exception and DTO changes
The major changes in this commit include the addition of data initialization script, handling of DuplicateUserException, and modifications in Data Transfer Objects (DTOs). The data initialization script helps to load test data into the application at startup. The DuplicateUserException is now thrown while registering a new user if the provided login already exists. Additionally, changes in the DTOs improve structure and readability. Code refactoring has also been performed for better maintainability.

--- a/compose.yml
+++ b/compose.yml
@@ -42,3 +42,4 @@ services:
       - SMTP_PASSWORD=570e8bf1b9ab8a
       - SMTP_PORT=25
       - SMTP_USERNAME=16f4841f49d2f9
+      - DATA_INIT=false
