--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ Spring:
     username: ${POSTGRES_USERNAME}
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      auto-commit: false
   jpa:
     hibernate:
       ddl-auto: ${DDL}
@@ -26,3 +28,6 @@ Spring:
 
 server:
   port: 8080
+
+api:
+  data-init: ${DATA_INIT}
