Add comments, user initialization method and change SMTP port
This commit contributes with a major update on the code. It includes adding comments to code, implementing a user initialization method that is useful for setting up default admin users during application startup. Furthermore, updated SMTP port in the mail service settings to use secure SMTP port 465 instead of port 25. It also carried out refactoring work to move service classes to services package, improving code organization. Finally, adds a NotFoundException when a resource cannot be found.

--- a/compose.yml
+++ b/compose.yml
@@ -40,6 +40,7 @@ services:
       - DDL=validate
       - SMTP_HOST=sandbox.smtp.mailtrap.io
       - SMTP_PASSWORD=570e8bf1b9ab8a
-      - SMTP_PORT=25
+      - SMTP_PORT=465
       - SMTP_USERNAME=16f4841f49d2f9
       - DATA_INIT=false
+      - USER_INIT=true
