Add configuration for dynamic user initialization
Introduced dynamic user initialization in the `UserInit` class using the `@Value` annotation to fetch values from the `application.yml` configuration file. This enhances the flexibility of user management, as the usernames and passwords for 'Corder' and 'Cycle en Terre' can now be set in the configuration file.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,3 +32,10 @@ server:
 api:
   data-init: ${DATA_INIT}
   user-init: ${USER_INIT}
+
+corder:
+  username: ${CORDER_USERNAME}
+  password: ${CORDER_PASSWORD}
+cet:
+  username: ${CET_USERNAME}
+  password: ${CET_PASSWORD}
